@@ -3,6 +3,7 @@ Version 7.0.1
 
 - Use RavenFactory's class loader when creating the service loader, fixing some issues in containers. (thanks exell-christopher)
 - Add ``release`` property to ``raven-log4j``. (thanks molaschi)
+- Add ``release`` property to JUL integration and ``raven-log4j2``.
 - Add setters for ``dsn`` and ``tags`` in JUL integration, fixes integration with WildFly. (thanks giilby)
 
 
